resolved overflow issues

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,13 +6,13 @@
 @media screen and (min-width:768px) {
     #Footer {
         transform: translateY(-80%);
-        animation: footer ease-in-out;
+        animation: footer linear;
         animation-timeline: view();
     }
 
     @keyframes footer {
         to {
-            transform: translateY(180%);
+            transform: translateY(130%);
         }
     }
 }
